tests/integration_rust/snapshots/project_tests__parse_project-2.snap
---
source: tests/project_tests.rs
expression: "dependency_names(&project, Platform::OsxArm64)"
---
[
    "all",
    "osx_arm64",
    "all_macos",
    "all_unix",
]
