tests/integration_rust/snapshots/project_tests__parse_project-3.snap
---
source: tests/project_tests.rs
expression: "dependency_names(&project, Platform::Win64)"
---
[
    "all",
    "win",
    "all_win",
]
