tests/integration_rust/snapshots/project_tests__parse_project.snap
---
source: tests/project_tests.rs
expression: "dependency_names(&project, Platform::Linux64)"
---
[
    "all",
    "linux",
    "all_linux",
    "all_unix",
]
